# alphamedia-newsbot

./: .env.example  .gitignore  README.md  pyproject.toml
src/alphamedia_newsbot/: __init__.py  app_factory.py  cli.py  config.py  filters.py  formatting.py  models.py  pipeline.py  storage.py  telegram_bot.py
src/alphamedia_newsbot/llm/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  json_utils.py  prompts.py  stub.py
src/alphamedia_newsbot/providers/: __init__.py  base.py  factory.py  rss.py  x_api.py
tests/: test_filters.py  test_pipeline.py  test_storage.py
