[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphamedia-newsbot"
version = "0.1.0"
description = "Telegram-controlled AI news bot for tracking, filtering, summarizing, and drafting posts from real news sources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0,<7",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
  "python-telegram-bot[job-queue]>=21,<23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
alphamedia-newsbot = "alphamedia_newsbot.telegram_bot:main"
newsbot-cli = "alphamedia_newsbot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alphamedia_newsbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
